--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,71 +1,35 @@
 {
-	"configurations": [
-		{
-			"name": "Debug pipex",
-			"type": "cppdbg",
-			"request": "launch",
-			"program": "${workspaceFolder}/pipex",
-			"args": [
-				"assets2/deepthought.txt", "notexisting", "wc", "outs2/test-xx.txt"
-			],
-			// "args": [
-			// 	"assets/deepthought.txt", "grep Now", "exit 5", "outs/test-08.txt"
-			// ],
-			// "args": [
-			// 	"input",
-			// 	"grep Hello",
-			// 	"awk '{count++} END {print count}'",
-			// 	"output"
-			// ],
-			"stopAtEntry": false,
-			"cwd": "${workspaceRoot}",
-			"environment": [],
-			"externalConsole": false,
-			"MIMode": "gdb",
-			"setupCommands": [
-				{
-					"description": "Activer l'impression en mode Pretty pour gdb",
-					"text": "-enable-pretty-printing",
-					"ignoreFailures": true
-				} // },
-					// {
-				// 	"description": "Définir la version désassemblage sur Intel",
-				// 	"text": "-gdb-set disassembly-flavor intel",
-				// 	"ignoreFailures": true
-				// }
-			],
-			"preLaunchTask": "pipex",
-			"miDebuggerPath": "/usr/bin/gdb"
-		},
-		{
-			"name": "Debug pipex_bonus",
-			"type": "cppdbg",
-			"request": "launch",
-			"program": "${workspaceFolder}/pipex_bonus",
-			"args": [
-				"3 6 4 5 "
-			],
-			//"args": [  "3 6 8 5 2 4" ],
-			"stopAtEntry": false,
-			"cwd": "${fileDirname}",
-			"environment": [],
-			"externalConsole": false,
-			"MIMode": "gdb",
-			"setupCommands": [
-				{
-					"description": "Activer l'impression en mode Pretty pour gdb",
-					"text": "-enable-pretty-printing",
-					"ignoreFailures": true
-				},
-				{
-					"description": "Définir la version désassemblage sur Intel",
-					"text": "-gdb-set disassembly-flavor intel",
-					"ignoreFailures": true
-				}
-			],
-			"preLaunchTask": "pipex_bonus",
-			"miDebuggerPath": "/usr/bin/gdb"
-		}
-	],
-	"version": "2.0.0"
+    "version": "0.2.0",
+    "configurations": [
+       {
+            "name": "pipex",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/pipex",
+            "args": [
+				"input", "sleep 3", "wc -l", "output" 
+            ],
+            "stopAtEntry": false,
+            "cwd": "${workspaceRoot}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "lldb",
+            "preLaunchTask": "pipex"
+        },
+        {
+            "name": "pipex bonus",
+            "type": "cppdbg",
+            "request": "launch",
+            //"program": "ARG='10 7 8 2 3 6 1 4 9 5'; {workspaceFolder}/push_swap $ARG | {workspaceFolder}/push_swap_checker $ARG",
+            "program": "${workspaceFolder}/pipex_bonus",
+            "args": [
+            ],
+            "stopAtEntry": false,
+            "cwd": "${fileDirname}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "lldb",
+            "preLaunchTask": "pipex_bonus"
+        }
+    ]
 }
